[gd_scene load_steps=10 format=2]

[ext_resource path="res://SoundEffects/school_bell.wav" type="AudioStream" id=1]
[ext_resource path="res://SoundEffects/hydraulic_stop.wav" type="AudioStream" id=2]
[ext_resource path="res://Rooms/Area7/Assets/mountain_lift.png" type="Texture" id=3]
[ext_resource path="res://Rooms/Area7/Assets/mountain_lift_railing.png" type="Texture" id=4]
[ext_resource path="res://Rooms/Area7/7-2/MountainLift.gd" type="Script" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -20, 0, 0, 20, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 19 )

[sub_resource type="Animation" id=4]
resource_name = "shift_mode"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../MountainLiftRailing:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 0 ]
}

[node name="MountainLiftSet" type="YSort"]

[node name="MountainLiftRailing" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 4 )
offset = Vector2( 0, -11 )
hframes = 2

[node name="MountainLift" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, 8 )
vframes = 2
hframes = 3
script = ExtResource( 5 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="MountainLift"]
position = Vector2( 0, 40 )
remote_path = NodePath("../../MountainLiftRailing")

[node name="KinematicBody2D" type="KinematicBody2D" parent="MountainLift"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MountainLift/KinematicBody2D"]
position = Vector2( -28, 44 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="MountainLift/KinematicBody2D"]
position = Vector2( 28, 44 )
scale = Vector2( -1, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="MountainLift/KinematicBody2D"]
position = Vector2( 24, 0 )
scale = Vector2( -1, -1 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="MountainLift/KinematicBody2D"]
position = Vector2( -24, 0 )
scale = Vector2( 1, -1 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="MountainLift/KinematicBody2D"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="MountainLift/KinematicBody2D"]
position = Vector2( -28, 24 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="MountainLift/KinematicBody2D"]
position = Vector2( 28, 24 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="ExitCollision" type="CollisionShape2D" parent="MountainLift/KinematicBody2D"]
position = Vector2( 0, 48 )
shape = SubResource( 2 )
disabled = true

[node name="TriggerArea" type="Area2D" parent="MountainLift"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MountainLift/TriggerArea"]
position = Vector2( 0, 20 )
shape = SubResource( 3 )

[node name="DestinationPos" type="Position2D" parent="MountainLift"]
position = Vector2( 0, 281 )

[node name="Tween" type="Tween" parent="MountainLift"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="MountainLift"]
playback_speed = 1.5
anims/shift_mode = SubResource( 4 )

[node name="Bell" type="AudioStreamPlayer" parent="MountainLift"]
stream = ExtResource( 1 )

[node name="StartStop" type="AudioStreamPlayer" parent="MountainLift"]
stream = ExtResource( 2 )
